v6.2.0:
- code improvements for MKWiimm
- use ${WIT} instead of wit when checking image region for
  MKWiimm and Kirbys Adventure Wii

v6.1.0:
- update szs to version 1.50a
- update title database
- show "Enter ID (...)" message at the end of menu
- show "ID	Name" header/footer in menu
- show proper version number in --help
- support for new MKWiimm config.def variables ID >= 29
  - default set:
    - MSGLANG1 = -
    - MSGLANG2 = E
  - set from ~/.patchimage.rc
    - TRACKLANG = x,${MKWIIMM_MSG_LANG}
    - CTRENAME = ${MKWIIMM_CTRENAME}
    - REORDER = ${MKWIIMM_CTREORDER}
    - see README.RC for more infos
- support for MKWiimm 2015-08 (ID 29)
- support for MKWiimm 2015-12 (ID 30)
- support for MKWiimm 2016-02 (ID 31)
- support for The Legend of Yoshi (SMN?66)
- support for Remixed Super Mario Bros. Wii (SMN?60)
- support for Ghostly Super Mario Boos. Wii (SMN?65)
- update wit/wszst override for MKWiimm
  - if you can't build MKWiimm, set MKWIIMM_OVERRIDE_SZS=TRUE
    in ~/.patchimage.rc to use supplied tools, that the case
    on Debian GNU/Linux Stretch or Sid
- update link to Wiimmfi-Patcher (Generic)
  - unused Patchimage uses "wit cp --wiimmfi" instead
- update link to Wiimmfi-Patcher (Mario Kart Wii)
- update for Wiimmfi-Patcher script changes

v6.0.0:
- update szs to version 1.40a
- add support for MKWiimm 2015-05
- support for replacing characters in NSMBW

v5.4.0:
- fixed major bug creating MKWiimm: image was not saved to proper
  destination directory (now everything's fine)
- update wit to version 2.31a
- update szs to version 1.39a
- add support for MKWiimm 2015-03
- add support for creating multiple MKWiimm at once
- add support for replacing karts in MKWiimm
  The madness begins, feel free to test this out. downloaded
  karts are prefixed mkwiimm_kart_ to avoid naming collision
  with fonts and items (3-chars.szs naming-scheme)
  .
  Original files are backed-up in ${PATCHIMAGE_RIIVOLUTION_DIR}/ \